Workaround rendering bug in a French manpage.
Non-breaking spaces seem not to be taken into account when the PO-file
lines are wrapped. Try and reformat in another way.

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -8568,8 +8568,8 @@ msgstr ""
 "B<dpkg-shlibdeps> calcule, pour les exécutables nommés dans ses arguments, "
 "les dépendances envers les bibliothèques partagées. Ces dépendances sont "
 "ajoutées au fichier B<debian/substvars> sous la forme B<shlibs:"
-">I<dependencyfield> où I<dependencyfield> est le nom du champ de «\\ "
-"dépendance\\ ». Toute autre variable après I<shlibs:> est supprimée du "
+">I<dependencyfield> où I<dependencyfield> est le nom du champ de "
+"«\\ dépendance\\ ». Toute autre variable après I<shlibs:> est supprimée du "
 "fichier."
 
 # type: Plain text
@@ -8595,9 +8595,9 @@ msgstr ""
 "recherche la liste des bibliothèques partagées qui lui sont liées. Puis pour "
 "chacune d'elles il analyse soit le fichier I<symbols>, soit le fichier "
 "I<shlibs> (si le premier n'existe pas). Ces deux fichiers sont supposés être "
-"fournis par le paquet de la bibliothèque et disponible dans «\\ /var/lib/dpkg/"
-"info/I<paquet>.I<symbols>\\ » ou «\\ /var/lib/dpkg/info/I<paquet>.I<shlibs>\\ "
-"». Le nom du paquet est trouvé en deux étapes\\ : en cherchant les fichiers "
+"fournis par le paquet de la bibliothèque et disponible dans "
+"«\\ /var/lib/dpkg/info/I<paquet>.I<symbols>\\ » ou «\\ /var/lib/dpkg/info/I<paquet>.I<shlibs>\\ »."
+"Le nom du paquet est trouvé en deux étapes\\ : en cherchant les fichiers "
 "de la bibliothèque sur le système (en cherchant dans le répertoire que B<ld."
 "so> utiliserait), puis un utilisant B<dpkg -S >I<fichier-bibliothèque> pour "
 "trouver le paquet qui fournit cette bibliothèque."
