Rephrase some bits (kind of “too much”) in a French manpage.

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -8680,7 +8680,7 @@ msgid ""
 "I<admindir> is /var/lib/dpkg."
 msgstr ""
 "Paquet fournissant des informations concernant les dépendances envers des "
-"bibliothèques partagées. Sauf indication contraire spécifiée, I<admindir> "
+"bibliothèques partagées. Sauf indication contraire, I<admindir> "
 "est par défaut «\\ /var/lib/dpkg\\ »."
 
 # type: Plain text
@@ -8706,7 +8706,7 @@ msgid ""
 "field and use this version if it's higher than the minimal version computed "
 "by scanning symbols."
 msgstr ""
-"Comme garde fou de sécurité, un fichier de symboles peut fournir un champ "
+"Comme garde-fou, un fichier de symboles peut fournir un champ "
 "I<Build-Depends-Package> de méta-information et B<dpkg-shlibdeps> en "
 "extraira la version minimale requise par le paquet correspondant depuis ce "
 "champ Build-Depends et utiliser cette version si elle est supérieure à la "
