*Possibly* fix another typo.

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -9215,7 +9215,7 @@ msgstr ""
 "shlibdeps> crée une liste de répertoires à vérifier de la manière suivante"
 "\\ : les répertoires énumérés dans le RPATH du binaire, les répertoires "
 "listés dans /etc/ld.so.conf, les répertoires listés dans la variable "
-"d'environnement LD_LIBRARY_PATH, et les répertoires publiques standard (/"
+"d'environnement LD_LIBRARY_PATH, et les répertoires publics standard (/"
 "lib, /usr/lib, /lib32, /usr/lib32, /lib64, /usr/lib64). Ensuite, il vérifie "
 "les répertoires qui sont dans l'arbre de construction du paquet binaire en "
 "cours d'analyse, dans l'arbre de construction du paquets indiqué avec "
