Fix typo in a French manpage.

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -8899,7 +8899,7 @@ msgstr ""
 "Fait commencer les variables de substitution par I<préfixe-pour-le-nom-des-"
 "variables>B<:> au lieu de B<shlibs:>. De même, toute variable de "
 "substitution commençant par I<préfixe-pour-le-nom-des-variables>B<:> (au "
-"lieu de B<shlib:>) est enlevée du fichier de substitution des variables."
+"lieu de B<shlibs:>) est enlevée du fichier de substitution des variables."
 
 # type: Plain text
 #: ../../man/dpkg-shlibdeps.1:158
