--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -543,7 +543,7 @@ msgstr ""
 "Le format de la description du paquet est un résumé bref sur la première "
 "ligne (après le champ «\\ Description\\ »). Les lignes suivantes peuvent "
 "servir à une description plus longue et plus détaillée. Chaque ligne de "
-"cette description longue doit être précédée d'un espace\\ ; quand c'est une "
+"cette description longue doit être précédée d'une espace\\ ; quand c'est une "
 "ligne blanche elle doit contenir un seul «\\ .\\ » avant cet espace."
 
 # type: SH
@@ -3704,7 +3704,7 @@ msgstr ""
 "Une erreur s'est produite. Malheureusement, lors de l'écriture il se trouve "
 "que I<message-d'erreur-complet> peut contenir des retour à la ligne, alors "
 "que dans les locales où les traducteurs n'ont pas fait d'erreurs, chaque "
-"nouvelle ligne est suivie par au moins un espace."
+"nouvelle ligne est suivie par au moins une espace."
 
 # type: TP
 #: ../../man/dpkg.1:522
@@ -8930,7 +8930,7 @@ msgstr ""
 "qui sont étiquetées pour un type de paquet donné. Si aucune information de "
 "type n'est donnée, il n'utilisera pas d'information. Par défaut, le type de "
 "paquet est « deb ». On peut créer une étiquette pour ces informations en les "
-"préfixant par le nom du type, un deux-points et un espace."
+"préfixant par le nom du type, un deux-points et une espace."
 
 # type: TP
 #: ../../man/dpkg-shlibdeps.1:165
