Another wrapping problem.

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -9082,8 +9082,8 @@ msgstr ""
 "avertissements dans plusieurs cas. Ils vous informent des choses qui peuvent "
 "être améliorées dans le paquet. Dans la plupart des cas, ces améliorations "
 "concernent directement les sources amont. Dans l'ordre d'importance "
-"décroissant, voici les différents avertissements que vous pouvez rencontrer"
-"\\ :"
+"décroissant, voici les différents avertissements que vous pouvez "
+"rencontrer\\ :"
 
 # type: TP
 #: ../../man/dpkg-shlibdeps.1:232
