*Possibly* fix another typo.

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -9129,7 +9129,7 @@ msgstr ""
 #: ../../man/dpkg-shlibdeps.1:251
 #, no-wrap
 msgid "B<dependency on >I<library>B< could be avoided if >I<binaries>B< were not uselessly linked against it (they use none of its symbols).>"
-msgstr "B<la dépendance sur la> I<bibliothèque> B<pourrait être évitée si> I<les binaires>B< inutiles n'étaient pas liés à celle-ci (ils utilisent aucun de ses symboles).>"
+msgstr "B<la dépendance sur la> I<bibliothèque> B<pourrait être évitée si> I<les binaires>B< inutiles n'étaient pas liés à celle-ci (ils n'utilisent aucun de ses symboles).>"
 
 # type: Plain text
 #: ../../man/dpkg-shlibdeps.1:257
