Fix another typo.

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -9142,7 +9142,7 @@ msgstr ""
 "Aucun des I<binaires> liés à la I<bibliothèque> utilise les symboles qu'elle "
 "fournit. En corrigeant tous les binaires, vous éviteriez la dépendance "
 "associée à cette bibliothèque (à moins que la même dépendance soit également "
-"lié à une autre bibliothèque qui est elle réellement utilisée)."
+"liée à une autre bibliothèque qui est elle réellement utilisée)."
 
 # type: TP
 #: ../../man/dpkg-shlibdeps.1:257
