Fix another typo.

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -9233,11 +9233,11 @@ msgid ""
 "this package is already created and that LD_LIBRARY_PATH contains the "
 "appropriate directory if it also is in a private directory."
 msgstr ""
-"Si la bibliothèque n'est pas trouvée est dans le répertoire privé de ce même "
+"Si la bibliothèque non trouvée est cependant disponible dans le répertoire privé de ce même "
 "paquet, alors il vous faut ajouter ce répertoire dans LD_LIBRARY_PATH. S'il "
 "est dans un autre paquet binaire en cours de construction, alors assurez-"
 "vous que le fichier shlibs/symbols de ce paquet est déjà créé et que "
-"LD_LIBRARY_PATH contient répertoire approprié si c'est aussi un répertoire "
+"LD_LIBRARY_PATH contient le répertoire approprié si c'est aussi un répertoire "
 "privé."
 
 # type: TP
