dpkg: refuses empty parameters when integer expected
Fix setinteger() funtion used for parsing integer options to
refuse empty parameters. Currently only affects --abort-after.

Based-on-patch-by: Bill Allombert <ballombe@debian.org>

--- a/THANKS
+++ b/THANKS
@@ -17,6 +17,7 @@ Bart Martens <bart.martens@advalvas.be>
 Bastian Kleineidam <calvin@debian.org>
 Ben Collins <bcollins@debian.org>
 Ben Pfaff <blp@cs.stanford.edu>
+Bill Allombert <ballombe@debian.org>
 Branden Robinson <branden@debian.org>
 Branko Lankester
 Brian M. Carlson <sandals@crustytoothpaste.ath.cx>
