--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     arguments starting with a dash are not interpreted as options.
     Closes: #293163
     Thanks to Bill Allombert for the patch.
+  * dpkg now correctly refuses empty parameters when an integer value is
+    wanted. Closes: #386197 Based on a patch by Bill Allombert.
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
