Fixed typo and incorrect translation in the dpkg-dev translation.
Spotted by Daniel Nylander.

--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -1,13 +1,13 @@
-# Copyright (C) 2007-2008 Software in the Public Interest, Inc.
+# Copyright (C) 2007-2009 Software in the Public Interest, Inc.
 # This file is distributed under the same license as the dpkg package.
-# Peter Krefting <peterk@debian.org>, 2007-2008.
+# Peter Krefting <peterk@debian.org>, 2007-2009.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.14.15\n"
+"Project-Id-Version: dpkg 1.14.26\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-12-29 05:28+0100\n"
-"PO-Revision-Date: 2008-08-29 17:49+0100\n"
+"PO-Revision-Date: 2009-03-22 15:10+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -796,7 +796,7 @@ msgstr[1] "\"%s\" är inte giltiga arkitektursträngar."
 msgid ""
 "current host architecture '%s' does not appear in package's architecture "
 "list (%s)"
-msgstr "aktuell värdarkitekturen \"%s\" finns i paketets arkitekturlista (%s)"
+msgstr "den aktuella värdarkitekturen \"%s\" finns inte i paketets arkitekturlista (%s)"
 
 #: scripts/dpkg-gencontrol.pl:274
 #, perl-format
