dpkg-deb: don't warn on unknown fields starting with "X-"
The fields named "X-" are never going to collide with official
fields and there's no need to warn that they are unknown.
Users are already explicitely creating them with XB-X-* fields
in debian/control.

--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,9 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     Thanks to Bill Allombert for the patch.
   * dpkg now correctly refuses empty parameters when an integer value is
     wanted. Closes: #386197 Based on a patch by Bill Allombert.
+  * dpkg-deb doesn't warn anymore when it encounters unknown DEBIAN/control
+    fields starting with "X-". Closes: #353040
+    Thanks to Nils Rennebarth for the patch.
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
