Fix syntax in german translation.
Reported-by: Modestas Vainius <modestas@vainius.eu>

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -9138,7 +9138,7 @@ msgstr ""
 #, no-wrap
 msgid "I<binary>B< contains an unresolvable reference to symbol >I<sym>B<: it's probably a plugin>"
 msgstr ""
-"I<Programm>B< enthält eine nicht-auflösbare Referenz auf Symbol I<Sym>B<: wahrscheinlich eine Erweiterung>."
+"I<Programm>B< enthält eine nicht-auflösbare Referenz auf Symbol >I<Sym>B<: wahrscheinlich eine Erweiterung>."
 
 # type: Plain text
 #: ../../man/dpkg-shlibdeps.1:251
