Fix a translation mistake in french version of dpkg(1)
Reported-by: Jonathan Gibert <jokot3@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * dpkg-deb doesn't warn anymore when it encounters unknown DEBIAN/control
     fields starting with "X-". Closes: #353040
     Thanks to Nils Rennebarth for the patch.
+  * Fix a mistake in the french translation of dpkg's manual page.
+    Thanks to Jonathan Gibert. Closes: #522032
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
