--- a/debian/changelog
+++ b/debian/changelog
@@ -76,6 +76,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * German (Sven Joachim).
   * Slovak (Ivan Masár). Closes: #519084
   * Swedish (Peter Krefting).
+  * Esperanto (Felipe Castro). Closes: #523023
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
