Slovak translation update

--- a/po/sk.po
+++ b/po/sk.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-03-10 16:03+0200\n"
-"PO-Revision-Date: 2009-03-10 16:09+0200\n"
+"PO-Revision-Date: 2009-04-08 16:08+0100\n"
 "Last-Translator: Ivan Masár <helix84@centrum.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -143,7 +143,7 @@ msgstr "operácia vyžaduje práva na čítanie/zápis do stavovej oblasti dpkg"
 #: lib/dbmodify.c:216
 #, c-format
 msgid "failed to remove my own update file %.255s"
-msgstr "chyba pri odstraňovaní môjho vlastného akualizačného súboru %.255s"
+msgstr "chyba pri odstraňovaní môjho vlastného aktualizačného súboru %.255s"
 
 #: lib/dbmodify.c:254
 #, c-format
@@ -418,7 +418,7 @@ msgid ""
 " version value starts with non-alphanumeric, suggest adding a space"
 msgstr ""
 "„pole %s“ odkazujúce na „%.255s“:\n"
-" číslo verzie začína nealfanumerickým znakom, návrh: pridajte medzeru"
+" číslo verzie nezačína alfanumerickým znakom. Návrh: pridajte medzeru"
 
 #: lib/fields.c:428 lib/fields.c:432
 #, c-format
@@ -724,12 +724,12 @@ msgstr "duplicitná hodnota poľa „%s“"
 #: lib/parse.c:224
 #, c-format
 msgid "user-defined field name `%.*s' too short"
-msgstr "užívateľsky definované meno poľa „%.*s“ je príliš krátke"
+msgstr "používateľom definované meno poľa „%.*s“ je príliš krátke"
 
 #: lib/parse.c:230
 #, c-format
 msgid "duplicate value for user-defined field `%.*s'"
-msgstr "duplicitná hodnota používateľsky definovaného poľa „%.*s“"
+msgstr "duplicitná hodnota používateľom definovaného poľa „%.*s“"
 
 #: lib/parse.c:244
 msgid "several package info entries found, only one allowed"
@@ -854,7 +854,7 @@ msgstr "prázdna hodnota %s"
 #: lib/showpkg.c:73
 #, c-format
 msgid "invalid character `%c' in field width\n"
-msgstr "nesprávny znak „%c“ v poli width\n"
+msgstr "nesprávny znak „%c“ v šírke poľa\n"
 
 #: lib/showpkg.c:160
 #, c-format
@@ -1021,7 +1021,7 @@ msgstr "nepodarilo sa nainštalovať nový súbor záujmu spúšťača „%.250s
 msgid ""
 "duplicate file trigger interest for filename `%.250s' and package `%.250s'"
 msgstr ""
-"duplicitný súbor záujmu spúšťača pri názve súboru „%.250s“ a balíku „%.250s“"
+"duplicitný súbor záujmu spúšťača pri názve súboru „%.250s“ a balíka „%.250s“"
 
 #: lib/triglib.c:493
 #, c-format
@@ -1381,7 +1381,7 @@ msgstr "dpkg: uvažuje sa o odstránení %s v prospech %s ...\n"
 #, c-format
 msgid "%s is not properly installed - ignoring any dependencies on it.\n"
 msgstr ""
-"%s nie je správne nainštalovaný - ignorujeú sa všetky závislosti na ňom.\n"
+"%s nie je správne nainštalovaný - ignorujú sa všetky závislosti na ňom.\n"
 
 #: src/archives.c:1031
 #, c-format
@@ -1406,7 +1406,7 @@ msgstr ""
 #: src/archives.c:1056
 #, c-format
 msgid "package %s has too many Conflicts/Replaces pairs"
-msgstr "balík %s má priliš veľa dvojíc Konfliktuje s/Nahrádza"
+msgstr "balík %s má príliš veľa dvojíc V konflikte s/Nahrádza"
 
 #: src/archives.c:1062
 #, c-format
@@ -1429,7 +1429,7 @@ msgstr "--%s --recursive vyžaduje aspoň jednu cestu ako argument"
 
 #: src/archives.c:1147
 msgid "failed to exec find for --recursive"
-msgstr "zlyhalo spustenie prikazu find pre --recursive"
+msgstr "zlyhalo spustenie príkazu find pre --recursive"
 
 #: src/archives.c:1152
 msgid "failed to fdopen find's pipe"
@@ -1526,7 +1526,7 @@ msgid ""
 " cannot configure (current status `%.250s')"
 msgstr ""
 "balík %.250s nie je pripravený na konfiguráciu\n"
-" nie je možné konfigurovať (sučasný stav „%.250s“)"
+" nie je možné konfigurovať (súčasný stav „%.250s“)"
 
 #: src/configure.c:128
 #, c-format
@@ -1556,8 +1556,8 @@ msgid ""
 "Package is in a very bad inconsistent state - you should\n"
 " reinstall it before attempting configuration."
 msgstr ""
-"Balík je vo veľmi nekonzistentnom stave - mali by ste ho reinštalovať pred\n"
-" pokusom o jeho kofiguráciu."
+"Balík je vo veľmi nekonzistentnom stave - mali by ste ho znova\n"
+" nainštalovať pred pokusom o jeho konfiguráciu."
 
 #: src/configure.c:146
 #, c-format
@@ -2027,7 +2027,7 @@ msgid ""
 "dselect or dpkg --configure --pending (or dpkg --triggers-only):\n"
 msgstr ""
 "Nasledovné balíky boli spustené, ale spracovanie spúšťačov ešte nebolo\n"
-"dokončené. Spracovanie súšťačov je možno vyžiadať  pomocou\n"
+"dokončené. Spracovanie spúšťačov je možno vyžiadať  pomocou\n"
 "dselect alebo dpkg --configure --pending (alebo dpkg --triggers-only):\n"
 
 #: src/enquiry.c:117 src/enquiry.c:172 src/enquiry.c:248 src/enquiry.c:311
@@ -2468,7 +2468,7 @@ msgid ""
 "later for copying conditions. There is NO warranty.\n"
 "See %s --license for copyright and license details.\n"
 msgstr ""
-"Toto je slobodný software; podrobnosti o pravidlách kopírovania\n"
+"Toto je slobodný softvér; podrobnosti o pravidlách kopírovania\n"
 "nájdete v GNU General Public Licence verzie 2 alebo neskoršej.\n"
 "Neposkytuje sa ŽIADNA záruka. Použitím %s --licence získate viac "
 "informácií.\n"
@@ -2565,8 +2565,8 @@ msgid ""
 " -x|--extract|-X|--vextract|--fsys-tarfile  on archives (type %s --help).\n"
 "\n"
 msgstr ""
-"Na archívy použijte dpkg -b|--build|-c|--contents|-e|--control|-I|--info|-"
-"f|--field|\n"
+"Na archívy použite dpkg -b|--build|-c|--contents|-e|--control|-I|--info|-f|--"
+"field|\n"
 " -x|--extract|-X|--vextract|--fsys-tarfile  (napíšte %s --help).\n"
 "\n"
 
@@ -2738,7 +2738,7 @@ msgstr ""
 "    200   conffdetail       Viac výstupov pre každý konfiguračný súbor\n"
 "     40   depcon            Závislosti a konflikty\n"
 "    400   depcondetail      Viac o závislostiach a konfliktoch\n"
-"  10000   triggers          Aktivácia a súracovanie spúšťačov\n"
+"  10000   triggers          Aktivácia a spracovanie spúšťačov\n"
 "  20000   triggersdetail    Množstvo výstupu týkajúceho sa spúšťačov\n"
 "  40000   triggersstupid    Nadbytočné množstvo výstupu týkajúceho sa "
 "spúšťačov\n"
@@ -2820,7 +2820,7 @@ msgstr ""
 " Vynucovanie:\n"
 "  all [!]                Nastaví všetky vynucovacie voľby\n"
 "  downgrade [*]          Nahradí balík nižšou verziou\n"
-"  configure-any          Nastaví ľubovolný balík, ktorý tomuto konkrétnemu "
+"  configure-any          Nastaví ľubovoľný balík, ktorý tomuto konkrétnemu "
 "môže pomôcť\n"
 "  hold                   Spracuje súvisiace balíky, aj keď sú pozdržané\n"
 "  bad-path               Premenná PATH neobsahuje dôležité programy, dajú sa "
@@ -3030,8 +3030,8 @@ msgstr "chyba potvrdzujúca, že „%.250s“ neexistuje"
 #: src/processarc.c:121
 msgid "failed to exec dpkg-split to see if it's part of a multiparter"
 msgstr ""
-"zlyhalo spustenie dpkg-split, aby bolo možné vidieť, či je to časťou "
-"multipartera"
+"nepodarilo sa spustiť dpkg-split na kontrolu či je časťou archívu "
+"skladajúceho sa z viacerých častí"
 
 #: src/processarc.c:124
 msgid "wait for dpkg-split failed"
@@ -3071,7 +3071,7 @@ msgstr "prešiel\n"
 
 #: src/processarc.c:170
 msgid "unable to get unique filename for control info"
-msgstr "nie je možné získať unikátne meno súboru pre riadiace informácie"
+msgstr "nie je možné získať jedinečný názov súboru pre riadiace informácie"
 
 #: src/processarc.c:192
 msgid "failed to exec dpkg-deb to extract control information"
@@ -3085,7 +3085,7 @@ msgstr "Zaznamenané informácie o %s z %s.\n"
 #: src/processarc.c:219
 #, c-format
 msgid "package architecture (%s) does not match system (%s)"
-msgstr "architektúra baliku (%s) nezodpovedá systému (%s)"
+msgstr "architektúra balíka (%s) nezodpovedá systému (%s)"
 
 #: src/processarc.c:274
 #, c-format
@@ -3423,11 +3423,11 @@ msgid ""
 msgstr ""
 "Syntax formátu:\n"
 "  Formát je reťazec, ktorý bude výstupom pre každý balík. Formát môže\n"
-"  zahŕňať štandardné návratové sekvencie \\n (nový riadok), \\r (návrat\n"
-"  vozíka) alebo \\\\ (obyčajné spätné lomítko). Informácie o balíku môžu\n"
-"  byť zahrnuté vložením odkazov na premenné do polí balíka použitím syntaxe\n"
-"  ${var[;šírka]}.  Polia budú zarovnané doprava, ak bude šírka záporná,\n"
-"  inak bude použité zarovnanie doľava. \n"
+"  obsahovať štandardné únikové klauzuly \\n (nový riadok), \\r (návrat\n"
+"  vozíka) alebo \\\\ (obyčajná spätná lomka). Informácie o balíku možno\n"
+"  zahrnúť vložením odkazov na premenné do polí balíka použitím syntaxe\n"
+"  ${var[;width]}. Polia budú zarovnané doprava, ak bude šírka záporná,\n"
+"  inak bude použité zarovnanie doľava.\n"
 
 #: src/query.c:489
 msgid ""
@@ -4125,7 +4125,7 @@ msgstr ""
 #: dpkg-deb/extract.c:245
 #, c-format
 msgid "`%.255s' is not a debian format archive"
-msgstr "„%.255s“ nemá formát debianovského archívu"
+msgstr "„%.255s“ nemá formát archívu Debianu"
 
 #: dpkg-deb/extract.c:258
 msgid "failed to open pipe descriptor `1' in paste"
@@ -4342,7 +4342,7 @@ msgid ""
 "<cfield> is the name of a field in the main `control' file.\n"
 "\n"
 msgstr ""
-"<deb> je názov debianovského formátu archívu.\n"
+"<deb> je názov formátu archívu Debianu.\n"
 "<csúbor> je názov riadiaceho súboru.\n"
 "<cpoložka> je názov položky v hlavnom súbore „control“.\n"
 "\n"
@@ -4559,7 +4559,7 @@ msgstr ""
 "        ... verzia:                 %s\n"
 "        ... MD5 súčet:              %s\n"
 "        ... dĺžka:                  %lu bajtov\n"
-"        ... rozdel každých:         %lu bajtov\n"
+"        ... rozdel. každých:        %lu bajtov\n"
 "    Číslo časti:                    %d/%d\n"
 "    Dĺžka časti:                    %zi bajtov\n"
 "    Offset časti:                   %lu bajtov\n"
@@ -4845,7 +4845,7 @@ msgid ""
 "later for copying conditions. There is NO warranty.\n"
 msgstr ""
 "\n"
-"Toto je slobodný software; podrobnosti o pravidlách kopírovania\n"
+"Toto je slobodný softvér; podrobnosti o pravidlách kopírovania\n"
 "nájdete v GNU General Public Licence verzia 2 alebo neskoršej.\n"
 "Neposkytuje sa ŽIADNA záruka.\n"
 
@@ -5874,7 +5874,8 @@ msgstr "Stav"
 #: scripts/update-alternatives.pl:945
 msgid "Press enter to keep the current choice[*], or type selection number: "
 msgstr ""
-"Stlačením enter ponecháte predvolenú možnosť[*], ináč zadajte číslo výberu: "
+"Stlačením klávesu Enter ponecháte predvolenú možnosť[*], inak zadajte číslo "
+"výberu: "
 
 #: scripts/update-alternatives.pl:979
 #, perl-format
