dpkg-source: don't die on SIGPIPE of uncompressors
Modify Dpkg::Source::CompressedFile to not die when uncompressors
processes (gunzip, bunzip, etc.) are killed by SIGPIPE. Recent tar
versions close the pipe before having read everything sent by the
uncompressor process when they encounter the end of the tar file.
This was of course problematic for Dpkg::Source::Archive.
This is a regression compared to etch's dpkg-source which dealt with
SIGPIPE properly.

The Dpkg::Source::Compressor::wait_end_process() function had to be
extended to be able to forward options to Dpkg::IPC::wait_child().

--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,9 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     Thanks to Nils Rennebarth for the patch.
   * Fix a mistake in the french translation of dpkg's manual page.
     Thanks to Jonathan Gibert. Closes: #522032
+  * Fix dpkg-source to not die when uncompressor processes are killed by
+    SIGPIPE due to tar closing the pipe without exhausting all the data
+    available. Closes: #523329
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
