--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-04-09  Raphael Hertzog  <hertzog@debian.org>
 
+	* configure.ac: Release 1.14.26.
+
+2009-04-09  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Source/CompressedFile.pm (cleanup_after_open): Do
 	not die when uncompressors processes (gunzip, bunzip, etc.) are
 	killed by SIGPIPE.
