--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.26) UNRELEASED; urgency=low
+dpkg (1.14.26) unstable; urgency=low
 
   [ Raphael Hertzog ]
   * Fix dpkg-source to not die when uncompressor processes are killed by
@@ -15,7 +15,7 @@ dpkg (1.14.26) UNRELEASED; urgency=low
   * Polish (Wiktor Wandachowicz). Closes: #514106
   * Swedish (Peter Krefting).
 
- -- Guillem Jover <guillem@debian.org>  Tue, 03 Feb 2009 00:27:59 +0200
+ -- Raphael Hertzog <hertzog@debian.org>  Thu, 09 Apr 2009 19:07:40 +0200
 
 dpkg (1.14.25) unstable; urgency=low
 
