--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-04-09  Raphael Hertzog  <hertzog@debian.org>
 
+	* configure.ac: Bump version to 1.14.27~.
+
+2009-04-09  Raphael Hertzog  <hertzog@debian.org>
+
 	* configure.ac: Release 1.14.26.
 
 2009-04-09  Raphael Hertzog  <hertzog@debian.org>
