Sync archtable with architectures currently present in Debian sid
Remove m68k.
Add kfreebsd-i386 and kfreebsd-amd64.

--- a/debian/changelog
+++ b/debian/changelog
@@ -57,6 +57,9 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
     Thanks to Ivan Masár.
+  * Sync archtable with architectures currently present in Debian sid.
+    - Remove m68k.
+    - Add kfreebsd-i386 and kfreebsd-amd64.
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
