Add avr32 to cputable
Closes: #523456

--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Sync archtable with architectures currently present in Debian sid.
     - Remove m68k.
     - Add kfreebsd-i386 and kfreebsd-amd64.
+  * Add avr32 to cputable. Closes: #523456
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
