Detect the curses headers to use instead of hardcoding them
Wrap the curses headers to use and select them through the config.h macros
detected at configure time. This way we can also cleanly detect the path
needed by mkcurkeys.pl w/o duplicating the selection logic.

--- a/debian/changelog
+++ b/debian/changelog
@@ -61,6 +61,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     - Remove m68k.
     - Add kfreebsd-i386 and kfreebsd-amd64.
   * Add avr32 to cputable. Closes: #523456
+  * Detect the curses headers to use instead of hardcoding them.
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
